# aclimate_v3_orm_frontend

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
src/aclimate_v3_orm_frontend/: __main__.py
src/aclimate_v3_orm_frontend/database/: __init__.py
src/aclimate_v3_orm_frontend/enums/: __init__.py  profile_type.py
src/aclimate_v3_orm_frontend/models/: __init__.py  app.py  user.py  ws_interested.py
src/aclimate_v3_orm_frontend/schemas/: __init__.py  app_schema.py  user_schema.py  ws_interested_schema.py
src/aclimate_v3_orm_frontend/services/: __init__.py  app_service.py  base_service.py  user_service.py  ws_interested_service.py
src/aclimate_v3_orm_frontend/validations/: __init__.py  app_validator.py  user_validator.py  ws_interested_validator.py
tests/: conftest.py  test_app.py  test_user.py  test_ws_interested.py
