[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "aclimate_v3_orm_frontend"
version = "v0.0.1"
description = "ORM for AClimate frontend database and its methods to manage users and interested locations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [ "sqlalchemy>=2.0.41", "psycopg2>=2.9.10", "python-dotenv>=1.1.0", "typing_extensions>=4.13.2", "pydantic>=2.11.4",]
[[project.authors]]
name = "santiago123x"
email = "s.calderon@cgiar.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/CIAT-DAPA/aclimate_v3_orm_frontend"
Download = "https://github.com/CIAT-DAPA/aclimate_v3_orm_frontend"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src",]
